k8s/frontend.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-deployment
  name: frontend-deployment
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: osamagharib/pip-frontend
        name: frontend
        resources: {}
        ports:
        - containerPort: 80
