k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3601"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$client_ip"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"

  labels:
    app: ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pip-app.xyz
    secretName: letsencrypt-secret
  rules:
    - host: pip-app.xyz
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend
                port:
                  number: 3000
          - pathType: Prefix
            path: /socket.io
            backend:
              service:
                name: backend
                port:
                  number: 3000

          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
